--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@remix-run/serve": "^2.10.3",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.3",
