--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "QR Chat",
+  "name": "Scan a QR code to start a serverless chat.",
   "icons": [
     {
       "src": "favicon.ico",
